fixing issue with visibility in the projects component

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -11,7 +11,7 @@
 }
 
 .intro-text {
-    margin-top: 50px;
+    margin-top: 90px;
     color: white;
     max-width: 80%; /* Set maximum width to 80% of the window width */
     font-size: 20px;
